src/components/SearchPage/index.css
.search-page {
  height: 100vh;
}

.search-page h1 {
  margin-bottom: 3.5rem;
}

.search-elements {
  float: right;
  margin: 0 6rem;
  margin-top: 22%;
}

.search-form {
  height: 48px;
  display: flex;
  justify-content: stretch;
  box-shadow: 0 6px 20px 0px rgba(222, 143, 143, 0.25);
  border-radius: 0;
  transition: box-shadow 200ms ease-in-out;
  position: relative;
}
.search-form:focus-within {
  box-shadow: 0 8px 25px 5px rgba(222, 143, 143, 0.25);
}

input[type="text"] {
  border: none;
  width: 100%;
  height: 100%;
  padding: 0 1rem;
  border-radius: 0;
}

input:focus {
  outline-color: transparent;
  outline: none;
}

input[type="submit"] {
  font-family: "Didot", cursive;
  font-weight: bold;
  background: #ff4f2d;
  border: none;
  text-transform: uppercase;
  padding-left: 2rem;
  padding-right: 2rem;
  cursor: pointer;
  /*if webkit appearance not applied the mobile browser will use it native style*/
  -webkit-appearance: none;
  -moz-appearance: none;
  border-radius: 0;
  height: 48px;
}

.highlight {
  border-bottom: 6px solid #ff4f2d;
}

@media only screen and (max-width: 425px) {
  .search-elements {
    margin-left: 1rem;
    margin-right: 1rem;
    margin-top: 50%;
  }

  .search-elements h1 {
    font-size: 2rem;
  }

  input[type="submit"] {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

